<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="project03.csc214.techplace.Models.MainActivity">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center"
        >

        <TextView
            android:text="@string/username_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/username_text"/>

        <EditText
            android:id="@+id/email_username_editText"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:inputType="text"/>

        <TextView
            android:text="@string/password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password_text"/>

        <EditText
            android:id="@+id/password_editText"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:onClick="onLoginButtonClick"/>

        <TextView
            android:text="@string/register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_text"/>

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_button"
            android:onClick="onRegisterButtonClick"/>


    </LinearLayout>



</android.support.constraint.ConstraintLayout>
